Change subnav-filters overflow from hidden to clearfix (display: table) prevent abs position clipping.

--- a/community/common-styles/_bp_filters.scss
+++ b/community/common-styles/_bp_filters.scss
@@ -15,9 +15,11 @@
 
 	// User/group accounts filters .subnav-filters
 
+	@include clearfix-element('.subnav-filters');
+
 	.subnav-filters {
 		background: none;
-		overflow: hidden;
+//		overflow: hidden;
 		list-style: none;
 		margin: $marg-med 0;
 		padding: 0;
